--- a/camel-sap/plugins/camel-sap-component/pom.xml
+++ b/camel-sap/plugins/camel-sap-component/pom.xml
@@ -110,12 +110,12 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.fusesource</groupId>
+			<groupId>org.fusesource.components.camel-sap</groupId>
 			<artifactId>org.fusesource.camel.component.sap</artifactId>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-			<groupId>org.fusesource</groupId>
+			<groupId>org.fusesource.components.camel-sap</groupId>
 			<artifactId>org.fusesource.camel.component.sap.model</artifactId>
 			<optional>true</optional>
 		</dependency>
