--- a/camel-sap/plugins/camel-sap-component/pom.xml
+++ b/camel-sap/plugins/camel-sap-component/pom.xml
@@ -112,11 +112,13 @@
 		<dependency>
 			<groupId>org.fusesource.components.camel-sap</groupId>
 			<artifactId>org.fusesource.camel.component.sap</artifactId>
+			<version>6.3.0-SNAPSHOT</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.fusesource.components.camel-sap</groupId>
 			<artifactId>org.fusesource.camel.component.sap.model</artifactId>
+			<version>6.3.0-SNAPSHOT</version>
 			<optional>true</optional>
 		</dependency>
 
@@ -135,12 +137,10 @@
 		<dependency>
 			<groupId>com.sap.conn.jco</groupId>
 			<artifactId>com.sap.conn.jco</artifactId>
-			<version>3.0.11.redhat_2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.sap.conn.idoc</groupId>
 			<artifactId>com.sap.conn.idoc</artifactId>
-			<version>3.0.10.redhat_2</version>
 		</dependency>
 
 		<dependency>
