--- a/camel-sap/tests/org.fusesource.camel.component.sap.test/pom.xml
+++ b/camel-sap/tests/org.fusesource.camel.component.sap.test/pom.xml
@@ -197,11 +197,13 @@
         <dependency>
             <groupId>org.fusesource.components.camel-sap</groupId>
             <artifactId>org.fusesource.camel.component.sap</artifactId>
+            <version>6.3.0-SNAPSHOT</version>
             <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.fusesource.components.camel-sap</groupId>
             <artifactId>org.fusesource.camel.component.sap.model</artifactId>
+            <version>6.3.0-SNAPSHOT</version>
             <optional>true</optional>
         </dependency>
         <dependency>
